--- a/style.css
+++ b/style.css
@@ -7,22 +7,26 @@
 
 .container-trasp{
  background-color: black;
- width: 100%;
+ width: 85%;
  height: 80px;
+ opacity: 0.8;
+ position: fixed;
  display: flex;
- justify-content: flex-end;
  align-items: center;
+ justify-content: flex-end;
+ 
+ 
+ 
+ 
 }
 
 .upgrade{
     color: white;
-    padding: .5rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    margin-right: 1rem;
+    margin-right: .5rem;
     border: 1px solid white;
     border-radius: 50px;
-    font-size: 14px;
+    padding: 0.5rem 2rem;
+    
 }
 
 .side-and-center-flex{
@@ -30,18 +34,21 @@
 }
 
 .sidebar{
-    width: 200px;
-    height: 633px;
+    width: 231.2px;
+    height: 713px;
     background-color: black;
+    position: relative;
+    
+    
     
 }
 
 .center{
-    max-height: 633px;
+    max-height: calc(713px - 70px);
     width: 100%;
     background-color: rgba(20,25,34,255);
     overflow: auto;
-    z-index: 1;
+    z-index: 800;
     position: relative;
 }
 
@@ -50,6 +57,28 @@
     height: 70px;
     background-color: rgba(40,40,40,255);
     margin-top: -70px;
-    z-index: 999;
+    z-index: 900;
     position: relative;
 }
+
+.logo{
+    background-color: black;
+    width: 200px;
+    height: 80px;
+    
+    
+    
+
+}
+
+.normal-logo{
+    margin-top: 1rem;
+    width: 150px;
+}
+
+.cont-and-logo-flex{
+    display: flex;
+    align-items: center;
+
+}
+
