--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@
 }
 
 .center-content{
+    width: 100%;
     margin-top: 100px;
 }
 
@@ -151,4 +152,40 @@ h2{
     color: white;
     margin-top: 1rem;
     margin-left: 1rem;
+}
+
+.cardsrow{
+    width: 95%;
+    height: 45vh;
+    
+    margin-left: 1rem;
+    display: flex;
+    gap: 1rem;
+   
+    
+}
+
+.card{
+    margin-top: 1rem;
+    
+    width: calc(100% / 6);
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.albumcover{
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+h3{
+    color: white;
+}
+
+p{
+    color: gray;
+    font-size: 15px;
 }
