--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@
  
 }
 
+body{
+    width: 100%;
+    height: 100%;
+}
+
 .upgrade{
     color: white;
     border: 1px solid white;
@@ -38,9 +43,9 @@
 .sidebar{
     width: 15%;
     height: 100vh;
-    background-color: black;
-    position: relative;   
+    background-color: black; 
     color: gray;
+    
 }
 
 .sideimg{
@@ -97,17 +102,19 @@
 /*CENTER:RECENTLY PLAYED, PLAYLIST, ARTISTS, FEATURES BAR*/
 
 .center{
-    max-height: 100vh;
+    height: 100vh;
     width: 100%;
     background-color: rgba(20,25,34,255);
-    overflow: auto;
     z-index: 800;
     position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .center-content{
     width: 100%;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .features{
@@ -125,11 +132,13 @@
 
 .player{
     width: 100%;
-    height: 70px;
+    height: 90px;
     background-color: rgba(40,40,40,255);
-    margin-top: -70px;
-    z-index: 900;
-    position: relative;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
 }
 
 .logo{
@@ -157,7 +166,6 @@ h2{
 .cardsrow{
     width: 95%;
     height: 45vh;
-    
     margin-left: 1rem;
     display: flex;
     gap: 1rem;
@@ -167,7 +175,6 @@ h2{
 
 .card{
     margin-top: 1rem;
-    
     width: calc(100% / 6);
     height: 40vh;
     display: flex;
@@ -189,3 +196,32 @@ p{
     color: gray;
     font-size: 15px;
 }
+
+.subh2{
+    margin-top: 1rem;
+    margin-left: 1rem;
+}
+
+
+
+.card2{
+    margin-top: 1rem;
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cardsrow2{
+    width: (100% / 2);
+    display: flex;
+    gap: 1rem;
+    margin-left: 1rem;
+}
+
+.albumcover-circle{
+    max-width: 30vh;
+    margin-bottom: 1rem;
+    border-radius: 50%;
+}
+
