--- a/style.css
+++ b/style.css
@@ -130,16 +130,6 @@ body{
 }
 
 
-.player{
-    width: 100%;
-    height: 90px;
-    background-color: rgba(40,40,40,255);
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-}
 
 .logo{
     background-color: black;
@@ -224,4 +214,104 @@ p{
     margin-bottom: 1rem;
     border-radius: 50%;
 }
+
+
+
+
+.player{
+    width: 100%;
+    height: 90px;
+    background-color: rgba(40,40,40,255);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+}
+
+.smallimg{
+    width: 70px;
+}
+
+.player{
+    display: flex;
+    justify-content: space-between;
+}
+
+.leftpart{
+    display: flex;
+    align-items: center;
+    gap:1.5rem;
+    margin: .5rem;
+    
+}
+
+h4{
+    color: white;
+}
+
+.fa-heart , .fa-folder{
+    color: gray;
+}
+
+
+.rightpart{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-right: .5rem;
+    
+}
+
+.volume{
+    width: 200px;
+    height: 5px;
+    color: black;
+    background-color: gray;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.volume-select{
+    font-size: 5px;
+    
+}
+
+.player-top{
+    display: flex;
+    gap: 1rem;
+    color: white;
+    margin-top: .5rem;
+    justify-content: center;
+
+}
+
+.centerpart .player-top .fa-circle-play{
+    font-size: 30px;
+    
+}
+
+.playerbar{
+    display: flex;
+    margin-top: 1rem;
+    gap: 1rem;
+    align-items: center;
+}
+
+.minute{
+        width: 400px;
+        height: 5px;
+        color: black;
+        background-color: gray;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+    
+    }
+
+    
+
+
+
 
